# sealedinfra

./: .env.example  .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  build.rs  dist.toml  oranda.json
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/docker/: Dockerfile  Dockerfile.base
.devcontainer/envoy/: Dockerfile  envoy.yaml
.devcontainer/scripts/: zshrc
.github/workflows/: release.yml
book/: book.toml
book/docs/: quickstart.md
book/src/: cli.md
config/: config.yaml  minikube-config.yaml
config/builder/: config.example.yaml
crates/sealed-cli/: Cargo.toml
crates/sealed-cli/src/: cli.rs  error.rs  init.rs  lib.rs
crates/sealed-cli/src/cli/: cluster.rs  docker_handler.rs  info.rs  sealedinfra.rs  serverinfra.rs  terraform.rs
crates/sealed-cli/src/cli/docker_handler/: build.rs  run.rs
crates/sealed-common/: Cargo.toml
crates/sealed-common/src/: error.rs  lib.rs  settings.rs
crates/sealed-common/src/util/: cache.rs  fs_utils.rs  git_ops.rs  mod.rs  tar.rs  terraform.rs
crates/sealed-database/: Cargo.toml
crates/sealed-database/src/: database.rs  error.rs  lib.rs
crates/sealed-database/src/models/: app.rs  mod.rs  task.rs  taskfile.rs
crates/sealed-database/src/repos/: apps_repo.rs  mod.rs  repos_repo.rs  task_repo.rs  user_repo.rs
crates/sealed-operator/: Cargo.toml
crates/sealed-operator/config/operators/: cnpg-1.22.1.yaml
crates/sealed-operator/src/: app_config.rs  controller.rs  error.rs  installer.rs  lib.rs
crates/sealed-operator/src/k8s/: container.rs  mod.rs  namespace.rs  service.rs
crates/sealed-operator/src/operator/: finalizer.rs  mod.rs  reconcile.rs
crates/sealed-server/: Cargo.toml
crates/sealed-server/src/: app_state.rs  error.rs  lib.rs
crates/sealed-server/src/git/: hash.rs
crates/sealed-server/src/routes/: docs.rs  frontend.rs
crates/sealed-server/src/routes/api/: apps.rs  git-delete-me.rs  healthcheck.rs  mod.rs  webhook.rs
crates/sealed-server/src/routes/api/git/: mod.rs
crates/sealed-server/src/utils/: schema.rs  server_utils.rs
crates/sealed-services/: Cargo.toml
crates/sealed-services/src/: error.rs  lib.rs
crates/sealed-services/src/services/: docker_service.rs  exec_service.rs  git_repo_service.rs  postgres.rs
crates/sealed-ui/: Cargo.toml
crates/sealed-ui/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  quickstart.md  what.md
migrations/: 01_init.down.sql  01_init.up.sql
public/: artifacts.json  changelog.rss  index.html
public/artifacts/: index.html
public/book/: 404.html  cli.html  faq.html  index.html  print.html  quickstart.html  searchindex.js  searchindex.json
public/changelog/: index.html
scripts/: devex.sh  start-minikube-mac.sh
src/: error.rs  lib.rs  logger.rs  main.rs  settings.rs  util.rs
src/cmd/: cli.rs  mod.rs
src/cmd/cli/: cluster.rs  docker_handler.rs  info.rs  sealedinfra.rs  serverinfra.rs  terraform.rs
src/cmd/cli/docker_handler/: build.rs  docker_utils.rs  generate.rs  run.rs
src/sealed/: app_config.rs  controller.rs  helpers.rs  installer.rs  mod.rs
src/sealed/k8s/: config_map.rs  container.rs  deployment.rs  pod.rs
src/sealed/operator/: crd.rs  finalizer.rs  mod.rs  reconcile.rs
src/server/: app_state.rs  mod.rs
src/server/git/: hash.rs
src/server/models/: git_repo.rs  mod.rs  tasks.rs  user.rs
src/server/repo/: apps_repo.rs  mod.rs  repos_repo.rs  tasks_repo.rs
src/server/routes/: docs.rs  frontend.rs  mod.rs
src/server/routes/api/: apps.rs  healthcheck.rs  mod.rs  webhook.rs
src/server/utils/: mod.rs  schema.rs  server_utils.rs
src/services/: docker_service.rs  exec_service.rs  git_repo_service.rs  mod.rs
src/task/: mod.rs  taskfile.rs
src/util/: cache.rs  docker_helpers.rs  format.rs  fs_utils.rs  git_ops.rs  macs.rs  mod.rs  spinner.rs  tar.rs  tracing.rs
terraform/: .terraform.lock.hcl  outputs.tf  providers.tf  variables.tf
terraform/.terraform/: terraform.tfstate
terraform/variables/: aws.tf  minikube.tf
test/: simple.yaml
wix/: main.wxs
