[package]
name = "sealedinfra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["ws"] }
clap = { version = "4.5.14", features = ["derive", "unstable-doc"] }
config = "0.14.0"
env_logger = "0.11.5"
futures = "0.3.30"
k8s-openapi = { version = "0", features = ["latest", "v1_30"] }
kube = { version = "0", features = ["runtime", "derive", "client"] }
log = { version = "0.4.22", features = ["serde"] }
schemars = { version = "0.8.21", features = ["uuid", "chrono"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full", "macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo", "rustc"] }
anyhow = "1.0.86"
