[package]
name = "sealedinfra"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
axum = { version = "0.7.5", features = ["macros", "ws"] }
bstr = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.14", features = ["derive", "unstable-doc"] }
config = "0.14.0"
dotenv = { version = "0.15.0", features = ["clap"] }
env_logger = "0.11.5"
futures = "0.3.30"
git-url-parse = { version = "0.4.5", features = ["tracing"] }
git2 = { version = "0.19.0" }
hex = { version = "0.4.3", features = ["serde"] }

k8s-openapi = { version = "0.23.0", features = ["v1_30"] }
kube = { version = "0.95", features = ["runtime", "derive", "client"] }
log = { version = "0.4.22", features = ["serde"] }
memmem = "0.1.1"
num_cpus = "1.16.0"
resolve-path = "0.1.0"
schemars = { version = "0.8.21", features = ["uuid", "chrono"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sha1 = "0.10.6"
sqlx = { version = "0.8.0", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.3", features = [
  "axum_extras",
  "openapi_extensions",
  "chrono",
] }
utoipa-axum = { version = "0.1.0-beta.2" }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[dependencies.libsqlite3-sys]
version = "0.28"
features = ["bundled"]

[dev-dependencies]
tempfile = "3.12.0"
sqlx = { version = "0.8.0", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "chrono",
  "uuid",
] }

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo", "rustc"] }
anyhow = "1.0.86"
