[package]
name = "sealed-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = { workspace = true }
console = { workspace = true }
lazy_static = { workspace = true }
indicatif = { workspace = true }
scopeguard = { workspace = true }
log = { workspace = true }

crossbeam = { workspace = true }
atty = { workspace = true }
